[tool.poetry]
name = "cathedral-rl"
version = "1.0.0"
description = "Interactive Multi-Agent Reinforcement Learning Environment for the board game Cathedral using PettingZoo"
repository = "https://github.com/elliottower/cathedral-rl"
keywords = ["cathedral", "game", "reinforcement learning", "RL", "pettingzoo", "gymnasium", "interactive", "pygame"]
authors = ["elliottower <elliot@elliottower.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cathedral_rl"}]
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/elliottower/cathedral-rl/issues"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
PettingZoo = "^1.22.3"
gymnasium = "^0.27.1"
numpy = "1.22.0"
pygame = "^2.1.3"
SuperSuit = "^3.7.1"
poetry = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.0.4"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = ["*.py", "*/__init__.py", "*/__version__.py", "*/_version.py", ".pre-commit-config.yaml"]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
