[tool.poetry]
name = "cathedral-rl"
version = "1.1.0"
description = "Interactive Multi-Agent Reinforcement Learning Environment for the board game Cathedral using PettingZoo"
repository = "https://github.com/elliottower/cathedral-rl"
keywords = ["cathedral", "game", "reinforcement learning", "RL", "pettingzoo", "gymnasium", "interactive", "pygame"]
authors = ["elliottower <elliot@elliottower.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cathedral_rl"}]
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/elliottower/cathedral-rl/issues"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
PettingZoo = "^1.22.3"
gymnasium = "^0.26.3"
pygame = "^2.1.3"
SuperSuit = "^3.7.1"
poetry = "^1.3.2"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.0.4"
black = "^23.1.0"

[tool.poetry.group.wasm.dependencies]
python = ">=3.11"
asyncio = "^3.4.3"
pygbag = "^0.7.1"
token-utils = "^0.1.8"

[tool.poetry.group.training.dependencies]
pandas = "^1.5.3"
pymunk = "^6.4.0"
protobuf = "3.19.6"

#ray = {extras = ["rllib"], version = "^2.3.0"}
#tensorflow-probability = "^0.19.0"
#torch = "^1.13.1"
#tensorflow = "^2.11.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = ["*.py", "*/__init__.py", "*/__version__.py", "*/_version.py", ".pre-commit-config.yaml"]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
